--- a/index.html
+++ b/index.html
@@ -75,5 +75,6 @@
 </head>
   <body class="text-slate-200">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
